io-hotmoka-examples/src/main/java/io/hotmoka/examples/errors/legalcall1/Super.java
package io.hotmoka.examples.errors.legalcall1;

public class Super {

	@Override
	public int hashCode() {
		return 42;
	}
}